--- a/website/pages/docs/plugins/sources/overview.mdx
+++ b/website/pages/docs/plugins/sources/overview.mdx
@@ -28,7 +28,7 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
 
 <PluginsTable type="source" plugins={Object.values(useSSG().plugins)}/>
 
-## Partners (Official vendors maintaing their own source plugins)
+## Partners (Official vendors maintaining their own source plugins)
 
 | **Name**                                                     |
 | ------------------------------------------------------------ |
