--- a/website/pages/docs/plugins/sources/overview.mdx
+++ b/website/pages/docs/plugins/sources/overview.mdx
@@ -28,11 +28,14 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
 
 <PluginsTable type="source" plugins={Object.values(useSSG().plugins)}/>
 
-## Community
+## Partners
+
+Official vendors maintaining their own source plugins
 
 | **Name**                                                     |
 | ------------------------------------------------------------ |
 | [Yandex](https://github.com/yandex-cloud/cq-provider-yandex) |
+| [Simple Analytics](https://github.com/simpleanalytics/cq-source-simpleanalytics) |
 
 ## Source Plugin Release Stages
 
